# agentleak-oss

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
agentleak/: __init__.py  __main__.py  cli.py  client.py  sdk.py
agentleak/agent/: __init__.py  context.py  llm.py  runner.py
agentleak/core/: __init__.py  agentrisk.py  compliance.py  config.py  detector.py  flow.py  report.py  runner.py  scenario.py  scoring.py  store.py  trace.py
agentleak/detectors/: __init__.py  custom.py  finance.py  healthcare.py  hr.py  pii.py  secrets.py
agentleak/examples/: __init__.py  customer_support_trace.json  finance_trace.json
agentleak/integrations/: __init__.py  autogen.py  crewai.py  generic.py  langchain.py  langgraph.py  registry.py
agentleak/reporters/: __init__.py  html_reporter.py  json_reporter.py  markdown_reporter.py
agentleak/reporters/templates/: report.html.j2
agentleak/scenarios/: __init__.py  convert.py  customer_support.py  education.py  finance.py  healthcare.py  hr.py
agentleak/scenarios/packs/: __init__.py  agentleak_bench.json  ai4privacy_probes.json
agentleak/web/: __init__.py  app.py
agentleak/web/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
agentleak/web/frontend/src/: index.css  main.tsx
agentleak/web/frontend/src/features/: Charts.tsx  ComplianceView.tsx  ConfigPanel.tsx  FlowView.tsx  ResultsView.tsx  RiGauge.tsx  RunRow.tsx  ThemeToggle.tsx
agentleak/web/frontend/src/hooks/: use-mobile.ts
agentleak/web/static/: index.html
agentleak/web/static/assets/: index-5JCMCipZ.css  index-B2IQiufT.css  index-B9KW0tyO.css  index-BlGU9jSo.css  index-Bs1WZI9l.js  index-CuR2rpSg.js  index-DLe2E1el.css  index-YewUOvdz.js  index-gh4arPuU.js  index-iXfqOhWm.js
docs/: agents.md  compliance.md  concepts.md  gui.md  integrations.md  platform.md  quickstart.md  scenarios.md  scoring.md
examples/: README.md  education_trace.json  healthcare_trace.json  hr_trace.json  multiagent_pipeline.py  simple_agent.py
tests/: conftest.py  test_agent.py  test_agentrisk.py  test_cli.py  test_client.py  test_compliance.py  test_config.py  test_convert.py  test_detectors.py  test_flow.py  test_integrations.py  test_llm.py  test_packs.py  test_platform.py  test_reports.py  test_runner.py  test_scenarios.py  test_scoring.py  test_sdk.py  test_store.py  test_trace.py  test_web.py
(+28 files in other folders)
