[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentleak"
version = "0.6.0"
description = "Open-source privacy-leakage testing framework for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "AgentLeak contributors" },
]
keywords = ["ai", "agents", "privacy", "pii", "security", "llm", "leakage", "testing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "typer>=0.9",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "jinja2>=3.0",
]

[project.optional-dependencies]
gui = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.4",
  "mypy>=1.8",
  "httpx>=0.27",
  "fastapi>=0.110",
  "uvicorn>=0.27",
]

[project.urls]
Homepage = "https://github.com/yagobski/agentleak-oss"
Repository = "https://github.com/yagobski/agentleak-oss"

[project.scripts]
agentleak = "agentleak.cli:main"

[tool.hatch.build]
# Never ship the frontend toolchain or its deps.
exclude = ["**/node_modules", "agentleak/web/frontend/**"]

[tool.hatch.build.targets.wheel]
packages = ["agentleak"]
# Built static assets aren't tracked by .gitignore's logic, so force-include them.
artifacts = [
  "agentleak/reporters/templates/*.j2",
  "agentleak/examples/*.json",
  "agentleak/scenarios/packs/*.json",
  "agentleak/web/static/**/*",
]

[tool.hatch.build.targets.sdist]
include = ["agentleak", "tests", "docs", "README.md", "LICENSE"]
exclude = ["**/node_modules", "agentleak/web/frontend/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency markers are designed to be called in argument defaults.
extend-immutable-calls = ["fastapi.Body", "fastapi.Query", "fastapi.Depends", "typer.Option", "typer.Argument"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
